# glass

./: .gitignore  CMakeLists.txt  Makefile  README.md  cgssv.f  dgssv.f  sgssv.f  test.cpp  zgssv.f
cglass/: CMakeLists.txt  gauss-seidel.h  types.h
cmake/: REGISTER_GLOBAL_CXX_SOURCES.cmake  REGISTER_GLOBAL_C_SOURCES.cmake  REGISTER_GLOBAL_FORTRAN_SOURCES.cmake  REGISTER_GLOBAL_HEADERS.cmake  SYSTEM_INFO.cmake
src/: CMakeLists.txt  cgssv.f  dgssv.f  sgssv.f  zgssv.f
tests/: CMakeLists.txt  test_gauss_seidel.c  test_gauss_seidel.cpp
